--- a/configs/Configuration.properties
+++ b/configs/Configuration.properties
@@ -18,7 +18,7 @@ testingType = browser
 DeviceName = Desktop Browser
 #testingType = mobile
 
-#iPad Pro
+iPad Pro
 #DeviceName = iPad Pro
 #Mobile_Width = 1024
 #Mobile_Height = 1366
