Updated Script for Small screen mobile devices execution

--- a/configs/Configuration.properties
+++ b/configs/Configuration.properties
@@ -8,10 +8,10 @@ Driver Path:
 #driverpath = operadriver.exe
 
 Browser:
-browser = chrome
+#browser = chrome
 #browser = edge
 #browser = opera
-#browser = firefox
+browser = firefox
 
 Compatibility Type:
 testingType = browser
@@ -22,3 +22,8 @@ Devices:
 #DeviceName = iPad Pro
 #Mobile_Width = 1024
 #Mobile_Height = 1366
+
+#DeviceName = Galaxy Note 3
+#Mobile_Width = 360
+#Mobile_Height = 640
+
