--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>GmailCompose</groupId>
-  <artifactId>GmailCompose</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>CucumberFramework</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>GmailCompose</groupId>
+	<artifactId>GmailCompose</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>CucumberFramework</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
@@ -50,7 +52,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>[4.13.1,)</version>
 		</dependency>
 		<dependency>
 			<groupId>info.cukes</groupId>
@@ -82,7 +84,7 @@
 		<dependency>
 			<groupId>org.apache.pdfbox</groupId>
 			<artifactId>pdfbox</artifactId>
-			<version>1.8.3</version>
+			<version>[2.0.15,)</version>
 		</dependency>
 		<dependency>
 			<groupId>io.appium</groupId>
@@ -100,12 +102,11 @@
 			<artifactId>json</artifactId>
 			<version>20160810</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.9.8</version>
-		</dependency>		
+			<version>[2.9.10.7,)</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
